--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "sorted-array": "^2.0.2",
     "source-map-support": "^0.5.3",
     "split-string": "^5.0.4",
     "traverse": "^0.6.6"
