--- a/package.json
+++ b/package.json
@@ -200,9 +200,10 @@
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
     "popper.js": "^1.14.2",
-    "react": "^16.2.0",
+    "react": "^15.6.2",
+    "react-addons-perf": "^15.4.2",
     "react-debounce-input": "^3.2.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^15.4.2",
     "react-highlight-words": "^0.11.0",
     "react-hot-loader": "^4.0.0-beta.13",
     "react-redux": "^5.0.6",
