--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
   "bump.files": {
     "app/package.json": ["\"version\":\\s*\"([^\"]*)\"", "\"version\": \"[version]\""],
     "app/package-lock.json": ["\"version\":\\s*\"([^\"]*)\"", "\"version\": \"[version]\""]
-  }
+  },
+  "bump.commit.enabled": false
 }
