--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "detect-port": "^1.2.2",
     "electron": "^1.7.11",
     "electron-builder": "^19.55.3",
-    "electron-devtools-installer": "^2.2.3",
+    "electron-devtools-installer": "^2.2.4",
     "electron-rebuild": "^1.7.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -207,6 +207,7 @@
     "react-dom": "^16.2.0",
     "react-highlight-words": "^0.11.0",
     "react-hot-loader": "^4.0.0-beta.13",
+    "react-perf-devtool": "^3.0.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
