--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "material-ui": "^0.20.0",
     "popper.js": "^1.14.2",
     "react": "^16.2.0",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.2.0",
     "react-highlight-words": "^0.11.0",
