--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "source-map-support": "^0.5.3",
     "split-string": "^5.0.4",
     "traverse": "^0.6.6"
