--- a/package.json
+++ b/package.json
@@ -219,7 +219,8 @@
     "reselect": "^3.0.1",
     "source-map-support": "^0.5.3",
     "split-string": "^5.0.4",
-    "traverse": "^0.6.6"
+    "traverse": "^0.6.6",
+    "uuid": "^3.3.2"
   },
   "devEngines": {
     "node": ">=7.x",
