begin trying to run dbl_dot_local.exe as child process if it doesn't connect

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
       ],
       "publish": [
         "github"
-      ]
+      ],
+      "extraFiles": ["./resources/extraFiles/**"]
     },
     "linux": {
       "target": [
