add proper path to dbl_dot_local in production (see https://github.com/chentsulin/electron-react-boilerplate/issues/1047#issuecomment-319359165)

--- a/package.json
+++ b/package.json
@@ -63,8 +63,7 @@
       ],
       "publish": [
         "github"
-      ],
-      "extraFiles": ["./resources/extraFiles/**"]
+      ]
     },
     "linux": {
       "target": [
@@ -76,7 +75,8 @@
     "directories": {
       "buildResources": "resources",
       "output": "release"
-    }
+    },
+    "extraFiles": ["resources/extraFiles/**"]
   },
   "repository": {
     "type": "git",
