forceCodeSigning on windows (set CSC_LINK and CSC_KEY_PASSWORD environment variables)

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
       ],
       "publish": [
         "github"
-      ]
+      ],
+      "forceCodeSigning": true
     },
     "linux": {
       "target": [
