--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,7 @@
     "app/package.json": ["\"version\":\\s*\"([^\"]*)\"", "\"version\": \"[version]\""],
     "app/package-lock.json": ["\"version\":\\s*\"([^\"]*)\"", "\"version\": \"[version]\""]
   },
-  "bump.commit.enabled": false
+  "bump.commit.enabled": false,
+  "editor.snippetSuggestions": "top",
+  "editor.tabSize": 2
 }
