--- a/package.json
+++ b/package.json
@@ -209,7 +209,7 @@
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.3.0",
     "react-highlight-words": "^0.11.0",
-    "react-hot-loader": "^4.0.0-beta.13",
+    "react-hot-loader": "^4.3.4",
     "react-perf-devtool": "^3.0.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
