add some explicit dependencies

--- a/package.json
+++ b/package.json
@@ -202,9 +202,11 @@
     "electron-updater": "^2.21.8",
     "fast-sort": "^1.5.3",
     "font-awesome": "^4.7.0",
+    "fs-extra": "^7.0.0",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
+    "md5": "^2.2.1",
     "mui-table": "^2.1.0",
     "popper.js": "^1.14.2",
     "react": "^16.3.0",
