--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "popper.js": "^1.14.2",
     "react": "^16.3.0",
     "react-addons-shallow-compare": "^15.6.2",
+    "react-autosuggest": "^9.4.0",
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.3.0",
     "react-highlight-words": "^0.11.0",
