--- a/package.json
+++ b/package.json
@@ -206,7 +206,7 @@
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
-    "md5": "^2.2.1",
+    "md5-file": "^4.0.0",
     "mui-table": "^2.1.0",
     "popper.js": "^1.14.2",
     "react": "^16.3.0",
