--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "react-select": "^2.0.0",
     "recompose": "^0.27.1",
+    "recursive-readdir": "^2.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
