--- a/package.json
+++ b/package.json
@@ -232,6 +232,7 @@
     "source-map-support": "^0.5.3",
     "split-string": "^5.0.4",
     "traverse": "^0.6.6",
+    "upath": "^1.1.0",
     "uuid": "^3.3.2"
   },
   "devEngines": {
