--- a/package.json
+++ b/package.json
@@ -203,6 +203,7 @@
     "fast-sort": "^1.5.3",
     "font-awesome": "^4.7.0",
     "fs-extra": "^7.0.0",
+    "hidefile": "^2.0.0",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
