--- a/package.json
+++ b/package.json
@@ -222,6 +222,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-scroll": "^1.7.10",
     "react-select": "^2.0.0",
     "recompose": "^0.27.1",
     "recursive-readdir": "^2.2.2",
