--- a/package.json
+++ b/package.json
@@ -234,7 +234,8 @@
     "split-string": "^5.0.4",
     "traverse": "^0.6.6",
     "upath": "^1.1.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "xml2js": "^0.4.19"
   },
   "devEngines": {
     "node": ">=7.x",
