--- a/package.json
+++ b/package.json
@@ -201,6 +201,7 @@
     "electron-store": "^1.3.0",
     "electron-updater": "^2.21.8",
     "fast-sort": "^1.5.3",
+    "filenamify": "^2.1.0",
     "font-awesome": "^4.7.0",
     "fs-extra": "^7.0.0",
     "history": "^4.7.2",
