--- a/package.json
+++ b/package.json
@@ -228,6 +228,8 @@
     "recompose": "^0.27.1",
     "recursive-readdir": "^2.2.2",
     "redux": "^3.7.2",
+    "redux-debounced": "^0.5.0",
+    "redux-throttle": "^0.1.1",
     "redux-thunk": "^2.2.0",
     "request-promise-native": "^1.0.5",
     "reselect": "^3.0.1",
