--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "font-awesome": "^4.7.0",
     "fs-extra": "^7.0.0",
     "history": "^4.7.2",
+    "immutable": "^3.8.2",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.0",
     "material-ui-superselectfield": "^1.9.8",
