--- a/package.json
+++ b/package.json
@@ -235,6 +235,7 @@
     "reselect": "^3.0.1",
     "source-map-support": "^0.5.3",
     "split-string": "^5.0.4",
+    "throttled-queue": "^1.0.5",
     "traverse": "^0.6.6",
     "upath": "^1.1.0",
     "uuid": "^3.3.2",
