--- a/package.json
+++ b/package.json
@@ -239,6 +239,7 @@
     "traverse": "^0.6.6",
     "upath": "^1.1.0",
     "uuid": "^3.3.2",
+    "wait-until": "^0.0.2",
     "xml2js": "^0.4.19"
   },
   "devEngines": {
