--- a/package.json
+++ b/package.json
@@ -194,6 +194,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.2",
+    "async-wait-until": "^1.2.4",
     "bootstrap": "4.0.0",
     "devtron": "^1.4.0",
     "electron-debug": "^1.5.0",
