--- a/package.json
+++ b/package.json
@@ -198,7 +198,7 @@
     "devtron": "^1.4.0",
     "electron-debug": "^1.5.0",
     "electron-log": "^2.2.14",
-    "electron-store": "^1.3.0",
+    "electron-settings": "^3.2.0",
     "electron-updater": "^2.21.8",
     "fast-sort": "^1.5.3",
     "filenamify": "^2.1.0",
