--- a/package.json
+++ b/package.json
@@ -195,11 +195,10 @@
     "@material-ui/core": "^3.4.0",
     "@material-ui/icons": "^3.0.1",
     "bootstrap": "4.0.0",
-    "conf": "^2.2.0",
     "devtron": "^1.4.0",
     "electron-debug": "^1.5.0",
     "electron-log": "^2.2.14",
-    "electron-settings": "^3.2.0",
+    "electron-store": "^2.0.0",
     "electron-updater": "^2.21.8",
     "fast-sort": "^1.5.3",
     "filenamify": "^2.1.0",
