--- a/package.json
+++ b/package.json
@@ -220,6 +220,7 @@
     "react-dom": "^16.3.0",
     "react-highlight-words": "^0.11.0",
     "react-hot-loader": "^4.3.4",
+    "react-if": "^3.1.3",
     "react-perf-devtool": "^3.0.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
