--- a/package.json
+++ b/package.json
@@ -242,20 +242,52 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "bootstrap": "4.0.0",
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.2.3",
+    "fast-sort": "^1.5.3",
+    "filenamify": "^2.1.0",
+    "fs-extra": "^7.0.0",
     "history": "^4.7.2",
+    "immutable": "^3.8.2",
+    "jquery": "^3.3.1",
+    "material-ui": "^0.20.0",
+    "material-ui-superselectfield": "^1.9.8",
+    "md5-file": "^4.0.0",
+    "mui-table": "^2.2.0",
+    "node-wait-until": "^1.0.0",
+    "popper.js": "^1.14.2",
     "react": "^16.6.3",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-autosuggest": "^9.4.0",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.6.3",
+    "react-highlight-words": "^0.11.0",
     "react-hot-loader": "^4.3.12",
+    "react-perf-devtool": "^3.0.7",
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-scroll": "^1.7.10",
+    "react-select": "^2.0.0",
+    "recompose": "^0.27.1",
+    "recursive-readdir": "^2.2.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "source-map-support": "^0.5.9"
+    "request-promise-native": "^1.0.5",
+    "reselect": "^3.0.1",
+    "source-map-support": "^0.5.9",
+    "split-string": "^5.0.4",
+    "throttled-queue": "^1.0.5",
+    "traverse": "^0.6.6",
+    "upath": "^1.1.0",
+    "uuid": "^3.3.2",
+    "wait-promise": "^0.4.1",
+    "xml2js": "^0.4.19"
   },
   "devEngines": {
     "node": ">=7.x",
