--- a/package.json
+++ b/package.json
@@ -248,6 +248,7 @@
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
+    "electron-store": "^2.0.0",
     "electron-updater": "^3.2.3",
     "fast-sort": "^1.5.3",
     "filenamify": "^2.1.0",
@@ -277,6 +278,7 @@
     "recompose": "^0.27.1",
     "recursive-readdir": "^2.2.2",
     "redux": "^4.0.1",
+    "redux-debounced": "^0.5.0",
     "redux-thunk": "^2.3.0",
     "request-promise-native": "^1.0.5",
     "reselect": "^3.0.1",
