--- a/package.json
+++ b/package.json
@@ -232,6 +232,7 @@
     "testcafe-browser-provider-electron": "^0.0.6",
     "testcafe-live": "^0.1.4",
     "testcafe-react-selectors": "^3.0.0",
+    "uglify-js": "^3.4.9",
     "url-loader": "^1.1.2",
     "webpack": "^4.26.0",
     "webpack-bundle-analyzer": "^3.0.3",
