--- a/package.json
+++ b/package.json
@@ -250,7 +250,7 @@
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
     "electron-store": "^2.0.0",
-    "electron-updater": "^3.2.3",
+    "electron-updater": "4.0.0",
     "fast-sort": "^1.5.3",
     "filenamify": "^2.1.0",
     "fs-extra": "^7.0.0",
