--- a/package.json
+++ b/package.json
@@ -281,6 +281,7 @@
     "redux": "^4.0.1",
     "redux-debounced": "^0.5.0",
     "redux-thunk": "^2.3.0",
+    "request": "2.34",
     "request-promise-native": "^1.0.5",
     "reselect": "^3.0.1",
     "source-map-support": "^0.5.9",
