--- a/package.json
+++ b/package.json
@@ -271,14 +271,17 @@
     "fast-sort": "^1.5.3",
     "filenamify": "^2.1.0",
     "fs-extra": "^7.0.0",
-    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "jquery": "^3.3.1",
     "md5-file": "^4.0.0",
     "mui-datatables": "^2.0.0-beta.58",
     "node-wait-until": "^1.0.0",
     "popper.js": "^1.14.2",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-autosuggest": "^9.4.0",
+    "react-debounce-input": "^3.2.0",
     "react-highlight-words": "^0.11.0",
+    "react-perf-devtool": "^3.1.8",
     "react-scroll": "^1.7.10",
     "react-select": "^2.0.0",
     "recompose": "^0.27.1",
