--- a/package.json
+++ b/package.json
@@ -260,7 +260,9 @@
     "electron-updater": "^4.0.6",
     "fast-sort": "^1.5.3",
     "filenamify": "^2.1.0",
+    "form-data": "^2.3.3",
     "fs-extra": "^7.0.0",
+    "got": "^9.6.0",
     "history": "^4.9.0",
     "immutable": "^3.8.2",
     "jquery": "^3.3.1",
