--- a/package.json
+++ b/package.json
@@ -280,6 +280,7 @@
     "react-perf-devtool": "^3.1.8",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
+    "react-router-cache-route": "^1.4.2",
     "react-router-dom": "^5.0.0",
     "react-scroll": "^1.7.10",
     "react-select": "^2.0.0",
