--- a/package.json
+++ b/package.json
@@ -297,7 +297,16 @@
     "upath": "^1.1.0",
     "uuid": "^3.3.2",
     "wait-promise": "^0.4.1",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.find": "^4.6.0",
+    "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
+    "lodash.isundefined": "^3.0.1",
+    "lodash.memoize": "^4.1.2",
+    "lodash.merge": "^4.6.0",
+    "prop-types": "^15.6.0",
+    "react-to-print": "^2.0.0-alpha.7"
   },
   "devEngines": {
     "node": ">=7.x",
