--- a/package.json
+++ b/package.json
@@ -267,7 +267,7 @@
     "immutable": "^3.8.2",
     "jquery": "^3.3.1",
     "md5-file": "^4.0.0",
-    "mui-datatables": "~2.0.0",
+    "mui-datatables": "^2.5.1",
     "node-wait-until": "^1.0.0",
     "popper.js": "^1.14.2",
     "react": "^16.8.6",
