--- a/package.json
+++ b/package.json
@@ -250,6 +250,7 @@
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "awesome-debounce-promise": "^2.1.0",
     "bootstrap": "4.0.0",
     "connected-react-router": "^6.3.2",
     "core-js": "2",
@@ -266,10 +267,18 @@
     "history": "^4.9.0",
     "immutable": "^3.8.2",
     "jquery": "^3.3.1",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.find": "^4.6.0",
+    "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
+    "lodash.isundefined": "^3.0.1",
+    "lodash.memoize": "^4.1.2",
+    "lodash.merge": "^4.6.0",
     "md5-file": "^4.0.0",
     "mui-datatables": "~2.0.0",
     "node-wait-until": "^1.0.0",
     "popper.js": "^1.14.2",
+    "prop-types": "^15.6.0",
     "react": "^16.8.6",
     "react-addons-shallow-compare": "^15.6.2",
     "react-autosuggest": "^9.4.0",
@@ -283,6 +292,7 @@
     "react-router-dom": "^5.0.0",
     "react-scroll": "^1.7.10",
     "react-select": "^2.0.0",
+    "react-to-print": "^2.0.0-alpha.7",
     "recompose": "^0.27.1",
     "recursive-readdir": "^2.2.2",
     "redux": "^4.0.1",
@@ -297,16 +307,7 @@
     "upath": "^1.1.0",
     "uuid": "^3.3.2",
     "wait-promise": "^0.4.1",
-    "xml2js": "^0.4.19",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.find": "^4.6.0",
-    "lodash.get": "^4.4.2",
-    "lodash.isequal": "^4.5.0",
-    "lodash.isundefined": "^3.0.1",
-    "lodash.memoize": "^4.1.2",
-    "lodash.merge": "^4.6.0",
-    "prop-types": "^15.6.0",
-    "react-to-print": "^2.0.0-alpha.7"
+    "xml2js": "^0.4.19"
   },
   "devEngines": {
     "node": ">=7.x",
