--- a/package.json
+++ b/package.json
@@ -250,6 +250,7 @@
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "async-foreach": "^0.1.3",
     "bootstrap": "4.0.0",
     "connected-react-router": "^6.3.2",
     "core-js": "2",
