--- a/package.json
+++ b/package.json
@@ -267,6 +267,7 @@
     "history": "^4.9.0",
     "immutable": "^3.8.2",
     "jquery": "^3.3.1",
+    "log4js": "^5.1.0",
     "md5-file": "^4.0.0",
     "mui-datatables": "^2.5.1",
     "node-wait-until": "^1.0.0",
