--- a/package.json
+++ b/package.json
@@ -256,8 +256,8 @@
     "core-js": "2",
     "devtron": "^1.4.0",
     "electron-debug": "^2.1.0",
-    "electron-in-page-search": "^1.3.2",
     "electron-log": "^3.0.4",
+    "electron-prompt": "^1.3.1",
     "electron-store": "^2.0.0",
     "electron-updater": "^4.0.6",
     "fast-sort": "^1.5.3",
