--- a/package.json
+++ b/package.json
@@ -265,10 +265,21 @@
     "form-data": "^2.3.3",
     "fs-extra": "^7.0.0",
     "got": "^9.6.0",
+    "highlight.js": "^9.15.10",
     "history": "^4.9.0",
     "immutable": "^3.8.2",
     "jquery": "^3.3.1",
     "log4js": "^5.1.0",
+    "markdown-it": "^10.0.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-deflist": "^2.0.3",
+    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-ins": "^3.0.0",
+    "markdown-it-mark": "^3.0.0",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-task-lists": "^2.1.1",
     "md5-file": "^4.0.0",
     "mui-datatables": "^2.5.1",
     "node-wait-until": "^1.0.0",
@@ -280,6 +291,7 @@
     "react-dom": "^16.8.6",
     "react-highlight-words": "^0.11.0",
     "react-hot-loader": "^4.8.2",
+    "react-markdown-editor-lite": "^0.4.3",
     "react-perf-devtool": "^3.1.8",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
