--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "dev": "cross-env START_HOT=1 node -r @babel/register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 yarn start-renderer-dev",
     "flow": "flow",
     "flow-typed": "rimraf flow-typed/npm && node --max-old-space-size=10000 ./node_modules/flow-typed/dist/cli.js install --overwrite || true",
-    "lint": "cross-env NODE_ENV=development eslint --cache --format=pretty .",
-    "lint-fix": "yarn --silent lint --fix; exit 0",
+    "lint": "lint-this .",
+    "lint-this": "cross-env NODE_ENV=development eslint --fix --cache --format=pretty",
+    "lint-fix": "yarn --silent lint --fix",
     "lint-styles": "stylelint --ignore-path .eslintignore '**/*.*(css|scss)' --syntax scss",
     "lint-styles-fix": "yarn --silent lint-styles --fix; exit 0",
     "package": "yarn build && electron-builder build --publish never",
