--- a/package.json
+++ b/package.json
@@ -303,6 +303,8 @@
     "recursive-readdir": "^2.2.2",
     "redux": "^4.0.1",
     "redux-debounced": "^0.5.0",
+    "redux-persist": "^6.0.0",
+    "redux-persist-electron-storage": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "request": "2.34",
     "reselect": "^3.0.1",
